tests/fixtures/invalid/pow_bool_list_none.py
# Cannot call pow() with Bool, List[int], None
x = pow(True, [1, 2, 3], None)
